--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,8 @@ local.properties
 # Maven
 ######################
 /log/
-*/target/**
+/target/
+
 ######################
 # Gradle
 ######################
@@ -138,4 +139,3 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
-/.idea/
